--- a/DATA/ms2_math-core/ms2_math-core.vbproj
+++ b/DATA/ms2_math-core/ms2_math-core.vbproj
@@ -137,7 +137,9 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Chromatogram.vb" />
+    <Compile Include="Chromatogram\Chromatogram.vb" />
+    <Compile Include="Chromatogram\ChromatogramTick.vb" />
+    <Compile Include="Chromatogram\PeakArea.vb" />
     <Compile Include="ms2AlignMatrix.vb" />
     <Compile Include="LibraryMatrix.vb" />
     <Compile Include="ms1.vb" />
