--- a/Assembly/assembly/assembly.vbproj
+++ b/Assembly/assembly/assembly.vbproj
@@ -158,6 +158,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="mzML\IonPair.vb" />
     <Compile Include="mzML\Extensions.vb" />
     <Compile Include="mzML\XML.vb" />
     <Compile Include="mzXML\Extensions.vb" />
