add MRM quantitative analysis API

--- a/DATA/ms2_math-core/ms2_math-core.vbproj
+++ b/DATA/ms2_math-core/ms2_math-core.vbproj
@@ -142,6 +142,9 @@
     <Compile Include="Chromatogram\PeakArea.vb" />
     <Compile Include="MRM\Coordinate.vb" />
     <Compile Include="MRM\IS.vb" />
+    <Compile Include="MRM\QuantitativeAnalysis\Samples.vb" />
+    <Compile Include="MRM\QuantitativeAnalysis\StandardCurve.vb" />
+    <Compile Include="MRM\QuantitativeAnalysis\viz.vb" />
     <Compile Include="ms2AlignMatrix.vb" />
     <Compile Include="LibraryMatrix.vb" />
     <Compile Include="ms1.vb" />
