--- a/DATA/Massbank/Massbank.vbproj
+++ b/DATA/Massbank/Massbank.vbproj
@@ -212,26 +212,26 @@
     <Compile Include="Public\NCBI\PubChem\ImageFly.vb" />
     <Compile Include="Public\TMIC\HMDB\MetaReference\RepositoryExtensions.vb" />
     <Compile Include="SDF\Extensions.vb" />
-    <Compile Include="Public\TMIC\FooDB\compounds.vb" />
-    <Compile Include="Public\TMIC\FooDB\compounds_enzymes.vb" />
-    <Compile Include="Public\TMIC\FooDB\compounds_flavors.vb" />
-    <Compile Include="Public\TMIC\FooDB\compounds_health_effects.vb" />
-    <Compile Include="Public\TMIC\FooDB\compounds_pathways.vb" />
-    <Compile Include="Public\TMIC\FooDB\compound_alternate_parents.vb" />
-    <Compile Include="Public\TMIC\FooDB\compound_external_descriptors.vb" />
-    <Compile Include="Public\TMIC\FooDB\compound_substituents.vb" />
-    <Compile Include="Public\TMIC\FooDB\compound_synonyms.vb" />
-    <Compile Include="Public\TMIC\FooDB\contents.vb" />
-    <Compile Include="Public\TMIC\FooDB\enzymes.vb" />
-    <Compile Include="Public\TMIC\FooDB\flavors.vb" />
-    <Compile Include="Public\TMIC\FooDB\foodcomex_compounds.vb" />
-    <Compile Include="Public\TMIC\FooDB\foodcomex_compound_providers.vb" />
-    <Compile Include="Public\TMIC\FooDB\foods.vb" />
-    <Compile Include="Public\TMIC\FooDB\food_taxonomies.vb" />
-    <Compile Include="Public\TMIC\FooDB\health_effects.vb" />
-    <Compile Include="Public\TMIC\FooDB\nutrients.vb" />
-    <Compile Include="Public\TMIC\FooDB\pathways.vb" />
-    <Compile Include="Public\TMIC\FooDB\references.vb" />
+    <Compile Include="Public\TMIC\FooDB\mysql\compounds.vb" />
+    <Compile Include="Public\TMIC\FooDB\mysql\compounds_enzymes.vb" />
+    <Compile Include="Public\TMIC\FooDB\mysql\compounds_flavors.vb" />
+    <Compile Include="Public\TMIC\FooDB\mysql\compounds_health_effects.vb" />
+    <Compile Include="Public\TMIC\FooDB\mysql\compounds_pathways.vb" />
+    <Compile Include="Public\TMIC\FooDB\mysql\compound_alternate_parents.vb" />
+    <Compile Include="Public\TMIC\FooDB\mysql\compound_external_descriptors.vb" />
+    <Compile Include="Public\TMIC\FooDB\mysql\compound_substituents.vb" />
+    <Compile Include="Public\TMIC\FooDB\mysql\compound_synonyms.vb" />
+    <Compile Include="Public\TMIC\FooDB\mysql\contents.vb" />
+    <Compile Include="Public\TMIC\FooDB\mysql\enzymes.vb" />
+    <Compile Include="Public\TMIC\FooDB\mysql\flavors.vb" />
+    <Compile Include="Public\TMIC\FooDB\mysql\foodcomex_compounds.vb" />
+    <Compile Include="Public\TMIC\FooDB\mysql\foodcomex_compound_providers.vb" />
+    <Compile Include="Public\TMIC\FooDB\mysql\foods.vb" />
+    <Compile Include="Public\TMIC\FooDB\mysql\food_taxonomies.vb" />
+    <Compile Include="Public\TMIC\FooDB\mysql\health_effects.vb" />
+    <Compile Include="Public\TMIC\FooDB\mysql\nutrients.vb" />
+    <Compile Include="Public\TMIC\FooDB\mysql\pathways.vb" />
+    <Compile Include="Public\TMIC\FooDB\mysql\references.vb" />
     <Compile Include="Public\TMIC\HMDB\BriefTable.vb" />
     <Compile Include="Public\TMIC\HMDB\Assembly\property.vb" />
     <Compile Include="Public\TMIC\HMDB\Assembly\disease.vb" />
